--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template -->
     <link href="css/grayscale.min.css" rel="stylesheet" />
@@ -84,126 +88,120 @@
             Amada<span class="base-yellow">X</span>treme
           </h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">
-            монгол дахь албан ёсны борлуулагч Авто Эрхэт ххк
+            монгол дахь албан ёсны борлуулагч <br />
+            Авто Эрхэт ххк
           </h2>
-          <div class="fixed-bottom">
-            <h5>
-              <a href="#about" class="mt-5 js-scroll-trigger base-yellow"
-                >Аялал аа эхлэе</a
-              >
-            </h5>
-            <h3><span class="far fa-chevron-double-down"></span></h3>
+          <!-- <h3><span class="far fa-chevron-double-down"></span></h3> -->
+          <div class="center-con">
+            <div class="round">
+              <a href="#about" class="mt-5 js-scroll-trigger ">
+                <h2 class="base-yellow">аялал аа эхлэе</h2>
+                <div id="cta">
+                  <span class="arrow primera next "></span>
+                  <span class="arrow segunda next "></span>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </header>
 
     <!-- About Section -->
-    <section id="about" class="about-section text-center">
+    <section id="about" class="about-section">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mx-auto">
-            <h2 class="text-white mb-4">BECOME AX</h2>
+            <h2 class="text-white mb-4 title-spec">
+              BECOME A<span class="base-yellow">X</span>
+            </h2>
             <p class="text-white-50">
-              Amadaxtreme Co.,Ltd has expertise in shock absorber for more than
-              20 years in Thailand. We are well organized, experienced, and
-              highly skilled company in developing and manufacturing shock
-              absorber in offroad style and OEM. For this reason, we are
-              confident to meet your demand with superior quality. Amadaxtreme
-              was established as manufacturer. The products’ design and quality
-              control system were based on international standards. Expanded the
-              export to Asian market.
-              <a href="http://startbootstrap.com/template-overviews/grayscale/"
-                >the preview page</a
-              >. The theme is open source, and you can use it for any purpose,
-              personal or commercial.
+              Amadaxtreme Co., Ltd нь 20 гаруй жилийн турш шороон замын чичиргээ
+              шингээгчийн технологийг сайжруулан, үйлдвэрлэж байгаа өндөр
+              туршлагатай, ур чадвартай компани юм. Тиймээс бид таны хэрэгцээнд
+              нийцсэн дээд зэргийн чанартай бүтээгдэхүүн санал болгож байна.
+              Манай компани бүтээгдэхүүний загварчлал, чанарын хяналтын систем
+              олон улсын стандартын дагуу үйлдвэрлэдэг.
+            </p>
+            <h2 class="text-white mb-4 title-spec">
+              <span class="base-yellow">Mission statement</span>
+            </h2>
+            <p class="text-white-50">
+              Amadaxtreme is fully committed to use its skills in craftsmanship,
+              technologies for efficiency and excellence and human resources to
+              develop designs into safer and more efficient.
+            </p>
+
+            <h2 class="text-white mb-4 title-spec">
+              <span class="base-yellow">Our Principles</span>
+            </h2>
+            <p class="text-white-50">
+              Amadaxtreme counterparts in the society by providing technologies
+              and counterparts in the society by providing technologies and
+              products that contribute safer life and more comfort. Furthermore,
+              we are committed to products that contribute safer life and more
+              comfort. Furthermore, we are committed to products that contribute
+              safer life and more comfort. Furthermore, we are committed to
+              create and develop products’ design that suitable with the global
+              environment.
             </p>
           </div>
           <div class="col-lg-6 mx-auto">
-            <h2 class="text-white mb-4">BECOME AX</h2>
+            <h2 class="text-white mb-4">2001</h2>
             <p class="text-white-50">
-              Grayscale is a free Bootstrap theme created by Start Bootstrap. It
-              can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/"
-                >the preview page</a
-              >. The theme is open source, and you can use it for any purpose,
-              personal or commercial.
+              Focused on off road market. Started to produce products’ based on
+              customers’ requirements. Manufactured the parts of the shocks.Won
+              as Champion in Australia Rainforest Challenge in Malaysia Champion
+              in the following competitions :Outback Trophy Challenge in
+              Rainforest Challenge in Malaysia and Thailand’s Offroad Champion
+              in Borneo Safari in Malaysia.
+            </p>
+            <h2 class="text-white mb-4">2010</h2>
+            <p class="text-white-50">
+              Champion in RFC China Amadaxtreme was certified by the BOI : The
+              Board of Investment of Thailand Expanded the market in Australia.
+              Champion in Tough Tracks 4×4 Challenge in Australia.
+            </p>
+            <h2 class="text-white mb-4">2012</h2>
+            <p class="text-white-50">
+              Developed the system of ISO/TS 16949 : 2009
             </p>
           </div>
         </div>
-        <img src="img/demo-image-01.jpg" class="img-fluid" alt="" />
+        <img src="img/" class="img-fluid" alt="" />
       </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Product Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
         <!-- Featured Project Row -->
-        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-          <div class="col-xl-8 col-lg-7">
+        <div class="row align-items-center no-gutters">
+          <div class="col-xl-6 col-lg-6">
+            <h3 class="title-spec text-white">No.1</h3>
+            <h1 class="title-spec text-white mb-4">
+              SHOCK<br />
+              <span class="base-yellow">AB</span>SORBER
+            </h1>
+            <h1 class="title-spec text-white">
+              <span class="base-yellow">A</span>DVENTURE
+              <br />
+              <span class="base-yellow">S</span>ERIES
+            </h1>
+            <p class="text-white-50">
+              Fully committed to use its skills in craftsmanship, technologies 
+              for efficiency and excellence and human resources to develop 
+              designs into safer and more efficient
+            </p>
+          </div>
+          <div class="col-xl-6 col-lg-6">
             <img
               class="img-fluid mb-3 mb-lg-0"
-              src="img/bg-masthead.jpg"
+              src="img/logo-m-subtank.jpg"
               alt=""
             />
           </div>
-          <div class="col-xl-4 col-lg-5">
-            <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">
-                Grayscale is open source and MIT licensed. This means you can
-                use it for any project - even commercial projects! Download it,
-                customize it, and publish your website!
-              </p>
-            </div>
-          </div>
         </div>
-
-        <!-- Project One Row -->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="" />
-          </div>
-          <div class="col-lg-6">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div
-                  class="project-text w-100 my-auto text-center text-lg-left"
-                >
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">
-                    An example of where you can put an image of a project, or
-                    anything else, along with a description.
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project Two Row -->
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="" />
-          </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div
-                  class="project-text w-100 my-auto text-center text-lg-right"
-                >
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">
-                    Another example of a project with its respective
-                    description. These sections work well responsively as well,
-                    try this theme on a small screen!
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 mr-0" />
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -303,6 +301,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
+    <script src="js/grayscale.js" type="text/javascript"></script>
     <script src="js/grayscale.min.js"></script>
   </body>
 </html>
