--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects"
+              <a class="nav-link js-scroll-trigger" href="#products"
                 >ХАЙГУУЛЧ II</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects"
+              <a class="nav-link js-scroll-trigger" href="#products-1"
                 >АДАЛ ЯВАЛ</a
               >
             </li>
@@ -85,13 +85,12 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">
-            Amada<span class="base-yellow">X</span>treme
+            AmadaXtreme
           </h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">
             монгол дахь албан ёсны борлуулагч <br />
             Авто Эрхэт ххк
           </h2>
-          <!-- <h3><span class="far fa-chevron-double-down"></span></h3> -->
           <div class="center-con">
             <div class="round">
               <a href="#about" class="mt-5 js-scroll-trigger ">
@@ -113,41 +112,35 @@
         <div class="row">
           <div class="col-lg-6 mx-auto">
             <h2 class="text-white mb-4 title-spec">
-              BECOME A<span class="base-yellow">X</span>
+              A<span class="base-yellow">X</span> үүсэв
             </h2>
             <p class="text-white-50">
-              Amadaxtreme Co., Ltd нь 20 гаруй жилийн турш шороон замын чичиргээ
+              Amadaxtreme Co., Ltd нь 20 гаруй жилийн турш бартаат замын чичиргээ
               шингээгчийн технологийг сайжруулан, үйлдвэрлэж байгаа өндөр
               туршлагатай, ур чадвартай компани юм. Тиймээс бид таны хэрэгцээнд
               нийцсэн дээд зэргийн чанартай бүтээгдэхүүн санал болгож байна.
-              Манай компани бүтээгдэхүүний загварчлал, чанарын хяналтын систем
-              олон улсын стандартын дагуу үйлдвэрлэдэг.
+              Манай компани бүтээгдэхүүнийхээ загварчлал, чанарын хяналтын системийг
+              олон улсын стандартын дагуу явуулдаг.
             </p>
             <h2 class="text-white mb-4 title-spec">
-              <span class="base-yellow">Mission statement</span>
+              <span class="base-yellow">Эрхэм Зорилго</span>
             </h2>
             <p class="text-white-50">
-              Amadaxtreme is fully committed to use its skills in craftsmanship,
-              technologies for efficiency and excellence and human resources to
-              develop designs into safer and more efficient.
+              Amadaxtreme - н чадварлаг баг өндөр технологи ашиглан бүтээгдэхүүний загваруудынхаа илүү аюулгүй, бүтээмжтэй ажиллагааг нэмэгдүүлэхээр шаргуу ажилладаг            
             </p>
-
             <h2 class="text-white mb-4 title-spec">
-              <span class="base-yellow">Our Principles</span>
+              <span class="base-yellow">Бидний Зарчим</span>
             </h2>
             <p class="text-white-50">
-              Amadaxtreme counterparts in the society by providing technologies
-              and counterparts in the society by providing technologies and
-              products that contribute safer life and more comfort. Furthermore,
-              we are committed to products that contribute safer life and more
-              comfort. Furthermore, we are committed to products that contribute
-              safer life and more comfort. Furthermore, we are committed to
+              Amadaxtreme counterparts in the society by providing technologies and
+              products that contribute safer life and more comfort. Furthermore, we are committed to products that contribute
+              safer life and more comfort and to
               create and develop products’ design that suitable with the global
               environment.
             </p>
           </div>
           <div class="col-lg-6 mx-auto">
-            <h2 class="text-white mb-4">2001</h2>
+            <h2 class="text-white mb-3">2001</h2>
             <p class="text-white-50">
               Focused on off road market. Started to produce products’ based on
               customers’ requirements. Manufactured the parts of the shocks.Won
@@ -173,18 +166,85 @@
     </section>
 
     <!-- Product Section -->
-    <section id="projects" class="projects-section bg-light">
+    <section id="products" class="projects-section bg-light">
       <div class="container">
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters">
           <div class="col-xl-6 col-lg-6">
-            <h3 class="title-spec text-white">No.1</h3>
+<div class="row">
+  <div class="col-6">
+    <h1 class="title-spec text-white">
+      <small>No.1</small> SHOCK<br />
+      <span class="base-yellow">AB</span>SORBER
+    </h1>
+  </div>
+  <div class="col-6">
+    <h1 class="title-spec text-white">
+      <span class="base-yellow">A</span>DVENTURE
+      <br />
+      <span class="base-yellow">S</span>ERIES
+    </h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <h5 class="base-yellow">Онцлог</h5>
+    <h5>
+      <ul style="list-style-type:none;" class="text-white-50">
+          <li><i class="fas fa-chevron-right"></i> 57мм Их бие</li>
+          <li><i class="fas fa-chevron-right"></i> 20мм диаметр Бүлүүрийн гол</li>
+          <li><i class="fas fa-chevron-right"></i> 46мм диаметр Бүлүүр</li>
+          <li><i class="fas fa-chevron-right"></i> Автомат хавхлага</li>
+          <li><i class="fas fa-chevron-right"></i> Теплоноор бүрсэн бүлүүртэй</li>
+          <li><i class="fas fa-chevron-right"></i> Хамгаалалтын хуниастай резинтэй</li>
+          <li><i class="fas fa-chevron-right"></i> Бат бөх чанарыг нэмэгдүүлсэн</li>
+          <li><i class="fas fa-chevron-right"></i> Хос хоолойтой загвар</li>
+          <li><i class="fas fa-chevron-right"></i> Резинэн жийргэвч</li>
+      </ul>
+    </h5>
+    <h5 class="text-white-50">Хүссэн тохиргоогоо хийх боломж</h5>
+
+<h5 class="text-white-50">Тух (зөөлөн) = Зөөлөн явдалтай, тухай машин унахыг хүссэн хэн бүхэнд</h5>
+
+<h5 class="text-white-50">Спорт (Хатуу) = Хурдан давхих үед аюулгүй байдал төрүүлэх спорт загвар</h5>
+
+  </div>
+</div>
+          </div>
+          <div class="col-xl-6 col-lg-6">
+            <img
+              class="img-fluid mb-3 mb-lg-0"
+              src="img/logo-m-subtank.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Product Section -->
+    <section id="products-1" class="projects-section bg-light">
+      <div class="container">
+        <!-- Featured Project Row -->
+        <div class="row align-items-center no-gutters">
+          <div class="col-xl-6 col-lg-6">
+            <img
+              class="img-fluid mb-3 mb-lg-0"
+              src="img/logo-m-subtank.jpg"
+              alt=""
+            />
+          </div>
+          <div class="col-xl-6 col-lg-6">
+            <div class="text-center mb-4">
+            <img class="mx-auto" src="img/logo-explorer-ii.png" alt="explorer-produt-logo">
+          </div>
             <h1 class="title-spec text-white mb-4">
-              SHOCK<br />
-              <span class="base-yellow">AB</span>SORBER
+              ЧИЧИРГЭЭ<br />
+              <span class="base-yellow">ШИ</span>НГЭЭГЧ
             </h1>
             <h1 class="title-spec text-white">
-              <span class="base-yellow">A</span>DVENTURE
+              <span class="base-yellow">EX</span>PLORER<span class="base-yellow"> II</span>
               <br />
               <span class="base-yellow">S</span>ERIES
             </h1>
@@ -193,13 +253,6 @@
               for efficiency and excellence and human resources to develop 
               designs into safer and more efficient
             </p>
-          </div>
-          <div class="col-xl-6 col-lg-6">
-            <img
-              class="img-fluid mb-3 mb-lg-0"
-              src="img/logo-m-subtank.jpg"
-              alt=""
-            />
           </div>
         </div>
         </div>
@@ -241,7 +294,7 @@
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4" />
                 <div class="small text-black-50">
-                  4923 Market Street, Orlando FL
+                  <a style="cursor: pointer;" onclick="myNavFunc()">Хаана юм бэ?</a>
                 </div>
               </div>
             </div>
@@ -274,13 +327,7 @@
 
         <div class="social d-flex justify-content-center">
           <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#" class="mx-2">
             <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-github"></i>
           </a>
         </div>
       </div>
@@ -289,7 +336,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2019
+        <p class="d-inline">ЦАХИМ ХУУДСЫГ <a href="">2PICA</a> © </p><p class="d-inline" id="year"></p>
       </div>
     </footer>
 
@@ -303,5 +350,17 @@
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.js" type="text/javascript"></script>
     <script src="js/grayscale.min.js"></script>
+    <script>
+
+function myNavFunc(){
+    // If it's an iPhone..
+    if( (navigator.platform.indexOf("iPhone") != -1) 
+        || (navigator.platform.indexOf("iPod") != -1)
+        || (navigator.platform.indexOf("iPad") != -1))
+         window.open("https://www.google.com/maps/place/47%C2%B055'47.8%22N+106%C2%B055'17.9%22E/@47.9299562,106.9197086,17z/data=!3m1!4b1!4m20!1m13!4m12!1m6!1m2!1s0x5d9692692f7251f7:0xfc2e3d10efd1fe2f!2sAuto+Plaza+1+Center,+Ulaanbaatar!2m2!1d106.9217161!2d47.9291955!1m3!2m2!1d107.2746357!2d48.0794477!3e0!3m5!1s0x0:0x0!7e2!8m2!3d47.9299534!4d106.9216367");
+    else
+         window.open("https://www.google.com/maps/place/47%C2%B055'47.8%22N+106%C2%B055'17.9%22E/@47.9299562,106.9197086,17z/data=!3m1!4b1!4m20!1m13!4m12!1m6!1m2!1s0x5d9692692f7251f7:0xfc2e3d10efd1fe2f!2sAuto+Plaza+1+Center,+Ulaanbaatar!2m2!1d106.9217161!2d47.9291955!1m3!2m2!1d107.2746357!2d48.0794477!3e0!3m5!1s0x0:0x0!7e2!8m2!3d47.9299534!4d106.9216367");
+}
+    </script>
   </body>
 </html>
