--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
         <div class="row align-items-center no-gutters">
           <div class="col-xl-6 col-lg-6">
 <div class="row">
+  <div class="col-12"><h1 class="title-spec text-white">No.1</h1></div>
   <div class="col-6">
     <h1 class="title-spec text-white">
-      <small>No.1</small> SHOCK<br />
+      SHOCK<br />
       <span class="base-yellow">AB</span>SORBER
     </h1>
   </div>
@@ -187,19 +188,19 @@
   </div>
 </div>
 <div class="row">
-  <div class="col">
+  <div class="col pl-5">
     <h5 class="base-yellow">Онцлог</h5>
     <h5>
-      <ul style="list-style-type:none;" class="text-white-50">
-          <li><i class="fas fa-chevron-right"></i> 57мм Их бие</li>
-          <li><i class="fas fa-chevron-right"></i> 20мм диаметр Бүлүүрийн гол</li>
-          <li><i class="fas fa-chevron-right"></i> 46мм диаметр Бүлүүр</li>
-          <li><i class="fas fa-chevron-right"></i> Автомат хавхлага</li>
-          <li><i class="fas fa-chevron-right"></i> Теплоноор бүрсэн бүлүүртэй</li>
-          <li><i class="fas fa-chevron-right"></i> Хамгаалалтын хуниастай резинтэй</li>
-          <li><i class="fas fa-chevron-right"></i> Бат бөх чанарыг нэмэгдүүлсэн</li>
-          <li><i class="fas fa-chevron-right"></i> Хос хоолойтой загвар</li>
-          <li><i class="fas fa-chevron-right"></i> Резинэн жийргэвч</li>
+      <ul style="list-style-type:none; margin-block-start: 0em;" class="text-white-50">
+          <li><i class="fal fa-chevron-right"></i> 57мм Их бие</li>
+          <li><i class="fal fa-chevron-right"></i> 20мм диаметр Бүлүүрийн гол</li>
+          <li><i class="fal fa-chevron-right"></i> 46мм диаметр Бүлүүр</li>
+          <li><i class="fal fa-chevron-right"></i> Автомат хавхлага</li>
+          <li><i class="fal fa-chevron-right"></i> Теплоноор бүрсэн бүлүүртэй</li>
+          <li><i class="fal fa-chevron-right"></i> Хамгаалалтын хуниастай резинтэй</li>
+          <li><i class="fal fa-chevron-right"></i> Бат бөх чанарыг нэмэгдүүлсэн</li>
+          <li><i class="fal fa-chevron-right"></i> Хос хоолойтой загвар</li>
+          <li><i class="fal fa-chevron-right"></i> Резинэн жийргэвч</li>
       </ul>
     </h5>
     <h5 class="text-white-50">Хүссэн тохиргоогоо хийх боломж</h5>
@@ -291,10 +292,10 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
+                <h4 class="text-uppercase m-0">Хаяг</h4>
                 <hr class="my-4" />
                 <div class="small text-black-50">
-                  <a style="cursor: pointer;" onclick="myNavFunc()">Хаана юм бэ?</a>
+                  <a style="cursor: pointer;" onclick="addressLink()">Газрын зураг дээр харах</a>
                 </div>
               </div>
             </div>
@@ -352,7 +353,7 @@
     <script src="js/grayscale.min.js"></script>
     <script>
 
-function myNavFunc(){
+function addressLink(){
     // If it's an iPhone..
     if( (navigator.platform.indexOf("iPhone") != -1) 
         || (navigator.platform.indexOf("iPod") != -1)
