--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet" />
@@ -221,7 +221,7 @@
 
         </div>
         <div class="col-xl-6 col-lg-6">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/logo-m-subtank.jpg" alt="" />
+          <img class="img-fluid mb-3 mb-lg-0" src="img/AX005.png" alt="" />
         </div>
       </div>
     </div>
@@ -298,7 +298,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section class="contact-section bg-black d-none d-sm-block">
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-3 mb-md-0">
@@ -349,6 +349,10 @@
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
+    <div class="container d-block d-sm-none">
+      <div class="mb-2"><i class="fas fa-map-marked-alt text-primary"></i><a style="cursor: pointer;" onclick="addressLink()"> Авто плаза 1 замын эсрэг уузвараар 150м</a></div>
+      <div class="mb-2"><i class="fas fa-mobile-alt text-primary"></i><a href="tel:+976 99115892"> 99115892</a></div>
+    </div>
     <div class="container">
       <p class="d-inline">ЦАХИМ ХУУДСЫГ <a href="">2PICA</a> © </p>
       <p class="d-inline" id="year"></p>
