facebook icon added

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <a class="nav-link js-scroll-trigger" href="#signup">Холбоо барих</a>
           </li>
         </ul>
+        <div class="d-flex justify-content-center">
+          <a href="https://www.facebook.com/101823837285176/posts/332366270897597/">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </div>
       </div>
     </div>
   </nav>
