--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mx-auto">
-          <h2 class="text-white mb-4 title-spec main-font">
+          <h2 class="text-white mb-3 title-spec main-font">
             A<span class="base-yellow main-font">X</span> үүсэв
           </h2>
           <p class="text-white-50">
@@ -129,14 +129,14 @@
             Манай компани бүтээгдэхүүнийхээ загварчлал, чанарын хяналтын системийг
             олон улсын стандартын дагуу явуулдаг.
           </p>
-          <h2 class="text-white mb-4 title-spec">
+          <h2 class="text-white mb-3 title-spec">
             <span class="base-yellow">Эрхэм Зорилго</span>
           </h2>
           <p class="text-white-50">
             Amadaxtreme - н чадварлаг баг өндөр технологи ашиглан бүтээгдэхүүний загваруудынхаа илүү аюулгүй, бүтээмжтэй
             ажиллагааг нэмэгдүүлэхээр шаргуу ажилладаг
           </p>
-          <h2 class="text-white mb-4 title-spec">
+          <h2 class="text-white mb-3 title-spec">
             <span class="base-yellow">Бидний Зарчим</span>
           </h2>
           <p class="text-white-50">
@@ -148,19 +148,12 @@
           <h3 class="text-white main-font">2001</h3>
           <hr align="left">
           <p class="text-white-50">
-            Focused on off road market. Started to produce products’ based on
-            customers’ requirements. Manufactured the parts of the shocks.Won
-            as Champion in Australia Rainforest Challenge in Malaysia Champion
-            in the following competitions :Outback Trophy Challenge in
-            Rainforest Challenge in Malaysia and Thailand’s Offroad Champion
-            in Borneo Safari in Malaysia.
+            Үйлчлүүлэгчдийн хэрэгцээ, шаардлагад нийцүүлэн бартаат замын чичиргээ шингээгч үйлдвэрлэж эхлэв. Австралийн ширэнгэн ойн тэмцээнд түрүүлэв, Малайз дахь ширэнгэн ойн Аутбайкын Цом тэмцээнд оролцож, Малайзын Борнео Сафари тэмцээнд Тайландын бартаат замын баг аваргаар шалгарлаа.
           </p>
           <h3 class="text-white main-font">2010</h3>
           <hr align="left">
           <p class="text-white-50">
-            Champion in RFC China Amadaxtreme was certified by the BOI : The
-            Board of Investment of Thailand Expanded the market in Australia.
-            Champion in Tough Tracks 4×4 Challenge in Australia.
+            Хятадын ширэнгэн ойн тэмцээнд Amadaxtreme аварга болж: Тайландын хөрөнгө оруулалтын зөвлөл Австралийн зах зээлд бүтээгдэхүүнээ нэвтрүүлэхийг зөвшөөрөв. Австралийн 4х4 бартаат замын сорилт тэмцээний аварга боллоо.
           </p>
           <h3 class="text-white main-font">2012</h3>
           <hr align="left">
@@ -241,7 +234,7 @@
           <img class="img-fluid mb-3 mb-lg-0" src="img/logo-m-subtank.jpg" alt="" />
         </div>
         <div class="col-xl-6 col-lg-6">
-          <h1 class="title-spec text-white mb-4">
+          <h1 class="title-spec text-white mb-3">
             ЧИЧИРГЭЭ<br />
             <span class="base-yellow">ШИ</span>НГЭЭГЧ
           </h1>
@@ -282,7 +275,7 @@
               </h5>
             </div>
           </div>
-          <div class="text-center mb-4">
+          <div class="text-center mb-3">
             <img src="img/logo-explorer-ii.png" height="100px" alt="explorer-produt-logo">
             <img src="img/one-year-warranty-mn.png" width="150px" alt="warranty-image">
           </div>
