--- a/index.html
+++ b/index.html
@@ -148,12 +148,15 @@
           <h3 class="text-white main-font">2001</h3>
           <hr align="left">
           <p class="text-white-50">
-            Үйлчлүүлэгчдийн хэрэгцээ, шаардлагад нийцүүлэн бартаат замын чичиргээ шингээгч үйлдвэрлэж эхлэв. Австралийн ширэнгэн ойн тэмцээнд түрүүлэв, Малайз дахь ширэнгэн ойн Аутбайкын Цом тэмцээнд оролцож, Малайзын Борнео Сафари тэмцээнд Тайландын бартаат замын баг аваргаар шалгарлаа.
+            Үйлчлүүлэгчдийн хэрэгцээ, шаардлагад нийцүүлэн бартаат замын чичиргээ шингээгч үйлдвэрлэж эхлэв. Австралийн
+            ширэнгэн ойн тэмцээнд түрүүлэв, Малайз дахь ширэнгэн ойн Аутбайкын Цом тэмцээнд оролцож, Малайзын Борнео
+            Сафари тэмцээнд Тайландын бартаат замын баг аваргаар шалгарлаа.
           </p>
           <h3 class="text-white main-font">2010</h3>
           <hr align="left">
           <p class="text-white-50">
-            Хятадын ширэнгэн ойн тэмцээнд Amadaxtreme аварга болж: Тайландын хөрөнгө оруулалтын зөвлөл Австралийн зах зээлд бүтээгдэхүүнээ нэвтрүүлэхийг зөвшөөрөв. Австралийн 4х4 бартаат замын сорилт тэмцээний аварга боллоо.
+            Хятадын ширэнгэн ойн тэмцээнд Amadaxtreme аварга болж: Тайландын хөрөнгө оруулалтын зөвлөл Австралийн зах
+            зээлд бүтээгдэхүүнээ нэвтрүүлэхийг зөвшөөрөв. Австралийн 4х4 бартаат замын сорилт тэмцээний аварга боллоо.
           </p>
           <h3 class="text-white main-font">2012</h3>
           <hr align="left">
@@ -288,10 +291,18 @@
   <!-- Signup Section -->
   <section id="signup" class="signup-section p-0">
     <div class="container-fluid px-0">
-      <div class="map-responsive">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.3266263110645!2d106.9185832254744!3d47.93006536470103!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96938cca9f0e11%3A0xf494dbebeb82f221!2z0JDQstGC0L4g0K3RgNGF0Y3Rgg!5e0!3m2!1smn!2smn!4v1583737105539!5m2!1smn!2smn"
-          width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe> </div>
+      <div class="row m-0">
+        <div class="col-8 p-0 map-responsive">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.3266263110645!2d106.9185832254744!3d47.93006536470103!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96938cca9f0e11%3A0xf494dbebeb82f221!2z0JDQstGC0L4g0K3RgNGF0Y3Rgg!5e0!3m2!1smn!2smn!4v1583737105539!5m2!1smn!2smn"
+            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+        <div class="col-4 p-0 map-responsive">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!4v1583822730304!6m8!1m7!1s9U0qdJuyXsUC8TOKNwWBMw!2m2!1d47.92992569605843!2d106.921516290209!3f53.10710787860664!4f-1.50513787820708!5f0.7820865974627469"
+            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -348,7 +359,8 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container d-block d-sm-none">
-      <div class="mb-2"><i class="fas fa-map-marked-alt text-primary"></i><a style="cursor: pointer;" onclick="addressLink()"> Авто плаза 1 замын эсрэг уузвараар 150м</a></div>
+      <div class="mb-2"><i class="fas fa-map-marked-alt text-primary"></i><a style="cursor: pointer;"
+          onclick="addressLink()"> Авто плаза 1 замын эсрэг уузвараар 150м</a></div>
       <div class="mb-2"><i class="fas fa-mobile-alt text-primary"></i><a href="tel:+976 99115892"> 99115892</a></div>
     </div>
     <div class="container">
