google street view removed and optimized

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link js-scroll-trigger" href="#products">ХАЙГУУЛЧ II</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#products-1">АДАЛ ЯВАЛ</a>
+            <a class="nav-link js-scroll-trigger" href="#products-1">АДАЛ ЯВДАЛ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Холбоо барих</a>
@@ -292,16 +292,16 @@
   <section id="signup" class="signup-section p-0">
     <div class="container-fluid px-0">
       <div class="row m-0">
-        <div class="col-8 p-0 map-responsive">
+        <div class="col-12 p-0 map-responsive">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.3266263110645!2d106.9185832254744!3d47.93006536470103!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d96938cca9f0e11%3A0xf494dbebeb82f221!2z0JDQstGC0L4g0K3RgNGF0Y3Rgg!5e0!3m2!1smn!2smn!4v1583737105539!5m2!1smn!2smn"
             width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
-        <div class="col-4 p-0 map-responsive">
+        <!-- <div class="col-4 p-0 map-responsive">
           <iframe
             src="https://www.google.com/maps/embed?pb=!4v1583822730304!6m8!1m7!1s9U0qdJuyXsUC8TOKNwWBMw!2m2!1d47.92992569605843!2d106.921516290209!3f53.10710787860664!4f-1.50513787820708!5f0.7820865974627469"
             width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
