--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
             </div>
           </div>
           <div class="col-12 text-center">
-            <img src="img/logo-adventure.png" alt="">
-            <img src="img/one-year-warranty-mn.png" width="150px" alt="warranty-image">
+            <img class="lazy" src="img/logo-adventure.png" alt="">
+            <img class="lazy" src="img/one-year-warranty-mn.png" width="150px" alt="warranty-image">
           </div>
 
         </div>
         <div class="col-xl-6 col-lg-6">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/AX005.png" alt="" />
+          <img class="lazy img-fluid mb-3 mb-lg-0" src="img/AX005.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters">
         <div class="col-xl-6 col-lg-6">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/logo-m-subtank.jpg" alt="" />
+          <img class="lazy img-fluid mb-3 mb-lg-0" src="img/logo-m-subtank.jpg" alt="" />
         </div>
         <div class="col-xl-6 col-lg-6">
           <h1 class="title-spec text-white mb-3">
@@ -279,8 +279,8 @@
             </div>
           </div>
           <div class="text-center mb-3">
-            <img src="img/logo-explorer-ii.png" height="100px" alt="explorer-produt-logo">
-            <img src="img/one-year-warranty-mn.png" width="150px" alt="warranty-image">
+            <img class="lazy" src="img/logo-explorer-ii.png" height="100px" alt="explorer-produt-logo">
+            <img class="lazy" src="img/one-year-warranty-mn.png" width="150px" alt="warranty-image">
           </div>
         </div>
       </div>
