--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- Custom fonts for this template -->
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
   <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
   <link
