preload fonts add in head and crossorigin

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
-  <link rel="preload" href="vendor/fontawesome/webfonts/fa-solid-900.woff2" as="font">
-  <link rel="preload" href="vendor/fontawesome/webfonts/fa-light-300.woff2" as="font">
+  <link rel="preload" href="vendor/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="vendor/fontawesome/webfonts/fa-light-300.woff2" as="font" crossorigin="anonymous">
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet" />
 </head>
