meta description added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн амортизаторын" />
+  <meta name="author" content="2PICA" />
 
   <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
 
