catalog page added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <a class="nav-link js-scroll-trigger" href="#products-1">АДАЛ ЯВДАЛ</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="catalog.html">Каталоги</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Холбоо барих</a>
           </li>
         </ul>
