--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн амортизаторын" />
+  <meta name="description" content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн спорт амортизаторын" />
   <meta name="author" content="2PICA" />
 
   <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
@@ -14,7 +14,7 @@
   <!-- Custom fonts for this template -->
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css" />
-  <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" />
+  <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" media="print" />
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-lg-6 mx-auto">
           <h2 class="text-white mb-3 title-spec main-font">
-            A<span class="base-yellow main-font">X</span> үүсэв
+            A<span class="base-yellow">X</span> үүсэв
           </h2>
           <p class="text-white-50">
             Amadaxtreme Co., Ltd нь 20 гаруй жилийн турш бартаат замын чичиргээ
