succed catalog facebook fixed

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн спорт амортизаторын" />
+  <meta name="description"
+    content="Aвто сэлбэгийн дэлгүүр. Ланд, Лексус, Прадо-н бүх төрлийн оргинал сэлбэгийн худалдаа. Бид Тайланд улсын AmadaXtreme брэндийн амортизаторын" />
   <meta name="author" content="2PICA" />
 
   <title>AmadaXtreme | Бүх ажиллагаа таны хяналтанд</title>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- Custom fonts for this template -->
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/style.min.css" />
-  <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" media="print" />
+  <link href="vendor/fontawesome/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -59,7 +61,7 @@
         </ul>
         <div class="d-flex justify-content-center">
           <a href="https://www.facebook.com/101823837285176/posts/332366270897597/">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook"></i>
           </a>
         </div>
       </div>
@@ -353,7 +355,7 @@
 
       <div class="social d-flex justify-content-center">
         <a href="https://www.facebook.com/101823837285176/posts/332366270897597/" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-facebook"></i>
         </a>
       </div>
     </div>
