--- a/cattest.html
+++ b/cattest.html
@@ -29,12 +29,17 @@
   <link href="css/grayscale.min.css" rel="stylesheet" />
 </head>
 
-<body onload="renderHello()">
+<body>
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
+        aria-controls="nav-home" aria-selected="true"></a>
     </div>
   </nav>
   <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+      test
+    </div>
   </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -47,8 +52,51 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/mustache@latest"></script>
-  <script src="render.js"></script>
+  <script>
+    // function template(args) {
+    //   fetch("./tesla.html")
+    //     .then(response => {
+    //       return response.text();
+    //     })
+    //     .then(data => {
+    //       document.getElementById(args).innerHTML = data;
+    //     });
+    // }
+
+    var ourRequest = new XMLHttpRequest();
+    ourRequest.open("GET", "http://localhost:5500/amadaxtreme/product.json");
+    ourRequest.onload = function () {
+      if (ourRequest.status >= 200 && ourRequest.status < 400) {
+        var ourData = JSON.parse(ourRequest.responseText);
+        renderHTML(ourData);
+      } else {
+        console.log("We connected to the server, but it returned an error.");
+      }
+    };
+    ourRequest.onerror = function () {
+      console.log("Connection error");
+    };
+    ourRequest.send();
+    function renderHTML(data) {
+      let carsName = Object.keys(data[0]);
+      let tabsName = [];
+      let tabContent = [];
+      for (i = 0; i < carsName.length; i++) {
+        let car = carsName[i];
+        let content = data[0][car];
+        // template(`nav-${car}`);
+        if (i === 0) {
+          tabsName += `<a class="nav-item nav-link active" id="nav-${car}-tab" data-toggle="tab" href="#nav-${car}" role="tab" aria-controls="nav-${car}" aria-selected="true">${car}</a>`;
+          tabContent += `<div class="tab-pane fade active show" id="nav-${car}" role="tabpanel" aria-labelledby="nav-${car}-tab"></div>`;
+        } else {
+          tabsName += `<a class="nav-item nav-link" id="nav-${car}-tab" data-toggle="tab" href="#nav-${car}" role="tab" aria-controls="nav-${car}" aria-selected="true">${car}</a>`;
+          tabContent += `<div class="tab-pane fade" id="nav-${car}" role="tabpanel" aria-labelledby="nav-${car}-tab"></div>`;
+        }
+      }
+      document.getElementById("nav-tab").innerHTML = tabsName;
+      document.getElementById("nav-tabContent").innerHTML = tabContent;
+    }
+  </script>
 </body>
 
 </html>
