--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
         <div class="d-flex justify-content-center">
           <a href="https://www.facebook.com/101823837285176/posts/332366270897597/">
-            <i class="fab fa-facebook"></i>
+            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -355,7 +355,7 @@
 
       <div class="social d-flex justify-content-center">
         <a href="https://www.facebook.com/101823837285176/posts/332366270897597/" class="mx-2">
-          <i class="fab fa-facebook"></i>
+          <i class="fab fa-facebook-f"></i>
         </a>
       </div>
     </div>
